--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -33,3 +33,5 @@ tensorflow-estimator==1.13.0
 termcolor==1.1.0
 urllib3==1.24.1
 Werkzeug==0.15.2
+
+wget https://github.com/fchollet/deep-learning-models/releases/download/v0.1/vgg16_weights_tf_dim_ordering_tf_kernels.h5
